# incident-response-env

./: .gitignore  LICENSE  README.md  __init__.py  baseline_inference.py  client.py  inference.py  models.py  pyproject.toml  scenarios.py
self_evolving/: __init__.py  evolution_engine.py  scenario_generator.py
server/: Dockerfile  __init__.py  app.py  baseline_runner.py  incident_response_env_environment.py
tasks/: __init__.py  base.py  task_easy_phishing.py  task_expert_apt_zeroday.py  task_hard_insider.py  task_hard_supply_chain.py  task_medium_lateral.py  task_medium_ransomware.py
